--- a/src/example/index.pug
+++ b/src/example/index.pug
@@ -14,6 +14,8 @@ html(lang="en-GB")
         input.timer-input-value(aria-label="Seconds value" data-index="2" placeholder="ss" required type="number" min="0" max="59" aria-disabled="true" disabled)
       label Hide 'zeroed' units?
         input(aria-label="Hide 'zeroed' units" name="hideZeroedUnits" type="checkbox" checked aria-disabled="true" disabled)
+      label Fullscreen Countdown 
+        input(name="fullscreen" aria-label="Play the countdown in fullscreen mode" type="checkbox" checked aria-disabled="true" disabled)
       label Theme Colour 
         input(name="themeColour" aria-label="Change theme colour hue" type="range" min="0" max="360" value="230" aria-disabled="true" disabled)
       label Cycle Theme Colour 
