Added latest version and data attribute for base font size

--- a/src/example/index.pug
+++ b/src/example/index.pug
@@ -3,7 +3,7 @@ html(lang="en-GB")
   head
     include templates/head.pug
   main
-    countdown-component
+    countdown-component(data-base-font-size="26")
     form#Settings(hidden)
       div Countdown Timer Length 
       div.timer-values
