--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -56,14 +56,7 @@ body {
   height: 100%;
 }
 
-html {
-  font-size: $body-font-size;
-}
-
-body,
-input,
-button,
-select {
+body {
   color: var(--primary-font-colour);
   font-family: $font-family;
   font-size: $body-font-size;
@@ -80,7 +73,6 @@ body {
 
   color: var(--background-colour);
   line-height: 1.5;
-  text-align: justify;
 
   accent-color: var(--theme-colour);
 
@@ -103,108 +95,32 @@ h3 {
   font-size: $font-size-l;
 }
 
-a,
-input,
-textarea,
-button,
-select,
-label {
-  cursor: pointer;
-
-  &:disabled,
-  &[aria-disabled='true'] {
-    cursor: not-allowed;
-    opacity: 0.75;
-  }
-}
-
-label {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  white-space: nowrap;
-
-  gap: $padding-small;
-}
-
-input,
-textarea,
-select {
-  margin: 0;
-
-  border: 1px solid var(--primary-font-colour);
-  border-radius: $border-radius;
-}
-
-input {
-  &[type='checkbox'] {
-    width: 1rem;
-    height: 1rem;
-    margin: 0.25rem;
-  }
-}
-
-select {
-  padding: $padding-small $padding-standard;
-}
-
-button {
-  display: flex;
-  padding: $padding-small;
-
-  border: none;
-
-  background-color: transparent;
-
-  &#StartStop,
-  &#SettingsButton,
-  &#UpdateButton {
-    font-size: $font-size-xxl;
-
-    opacity: 0.2;
-    transition: opacity $default-transition;
-
-    &:hover,
-    &:active,
-    &:focus {
-      &:not(:disabled):not([aria-disabled='true']) {
-        opacity: 1;
-      }
-    }
-
-    &.timer-started {
-      .play {
-        display: none;
-      }
-    }
-
-    &.timer-stopped {
-      .pause {
-        display: none;
-      }
-    }
-  }
-
-  &#SettingsButton {
-    position: absolute;
-    top: $padding-standard;
-    right: $padding-standard;
-
-    font-size: $font-size-xl;
-  }
-}
-
 main {
   display: flex;
   flex: 1 0 auto;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   margin: $padding-standard;
   overflow: auto;
 
   background-color: var(--theme-colour);
+
+  article {
+    font-size: $font-size-xl;
+
+    gap: $padding-standard;
+
+    .challenge-title {
+      margin-right: $padding-standard;
+
+      font-weight: 700;
+
+      &::after {
+        content: ':';
+      }
+    }
+  }
 }
 
 countdown-component {
@@ -213,191 +129,18 @@ countdown-component {
   }
 }
 
-#Timer {
-  display: grid;
-  grid-template-columns: 1fr 1fr repeat(2, auto 1fr 1fr);
-  align-items: baseline;
-
-  font-family: $timer-font-family;
-  font-size: $font-size-xl;
-
-  transition: font-size $default-transition;
-
-  &.seconds {
-    .second-value {
-      opacity: 1;
-    }
-  }
-
-  &.minutes {
-    .minute-value,
-    .minute-divider {
-      opacity: 1;
-    }
-  }
-
-  &.hours {
-    .hour-value,
-    .hour-divider {
-      opacity: 1;
-    }
-  }
-
-  &.hide-hours {
-    grid-template-columns: 1fr 1fr auto 1fr 1fr;
-
-    font-size: $font-size-xxl;
-
-    .hour-value,
-    .hour-divider {
-      display: none;
-    }
-  }
-
-  &.hide-minutes {
-    grid-template-columns: 1fr 1fr auto;
-
-    font-size: $font-size-xxxl;
-
-    .minute-value,
-    .minute-divider {
-      display: none;
-    }
-  }
-
-  .hour-value,
-  .minute-value,
-  .second-value,
-  .hour-divider,
-  .minute-divider {
-    opacity: 0.5;
-    transition: opacity $default-transition;
-  }
-
-  #Hours1,
-  #Minutes1,
-  #Seconds1 {
-    text-align: right;
-  }
-
-  #Hours2,
-  #Minutes2,
-  #Seconds2 {
-    text-align: left;
-  }
-}
-
-#Settings {
-  display: flex;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: $padding-standard;
-  transform: translateY(100%);
-
-  background-color: var(--background-colour);
-
-  transition: all $default-transition;
-
-  gap: $padding-standard;
-
-  &:valid {
-    #UpdateButton {
-      opacity: 1;
-    }
-  }
-
-  &.show {
-    transform: translateY(0);
-  }
-
-  label {
-    display: flex;
-  }
-
-  .timer-values {
-    display: flex;
-
-    gap: $padding-small;
-
-    input,
-    span {
-      font-family: $timer-font-family;
-      font-size: $font-size-l;
-      text-align: center;
-    }
-
-    input {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: calc(2 * $font-size-xl);
-      height: $font-size-xl;
-      padding-left: $padding-small;
-    }
-  }
-
-  #UpdateButton {
-    color: $success-colour;
-  }
-}
-
 @media screen and (min-width: 680px) {
   $padding-page-width: 10vw;
 
-  header,
-  nav,
-  main,
-  footer .content,
-  #Preferences {
+  main {
     padding: $padding-small $padding-page-width;
-  }
-
-  h1,
-  h2,
-  h3 {
-    flex-direction: row;
-  }
-
-  .tag {
-    text-align: left;
-  }
-
-  #Timer {
-    font-size: $font-size-xxl;
-
-    &.hide-hours {
-      font-size: $font-size-xxxl;
-    }
-
-    &.hide-minutes {
-      font-size: $font-size-xxxxl;
-    }
   }
 }
 
 @media screen and (min-width: 1024px) {
   $padding-page-width: 20vw;
 
-  header,
-  nav,
-  main,
-  footer .content,
-  #Preferences {
+  main {
     padding: $padding-small $padding-page-width;
-  }
-}
-
-@keyframes pulse-animation {
-  0% {
-    box-shadow: inset 0 0 10px 10px var(--theme-colour);
-  }
-
-  100% {
-    box-shadow: inset 0 0 10px 10px var(--primary-font-colour);
   }
 }
