--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -14,8 +14,8 @@ $font-size-xxl: 3.375rem;
 $font-size-xxxl: 5.063rem;
 $font-size-xxxxl: 7.594rem;
 $font-size-s: 0.667rem;
-$font-family: 'Raleway', sans-serif;
-$timer-font-family: 'Bungee', sans-serif;
+$font-family: 'Lato', sans-serif;
+$heading-font-family: 'Josefin Sans', sans-serif;
 
 // Colours
 $theme-colour: hsl(230, 71%, 24%);
