--- a/src/index.pug
+++ b/src/index.pug
@@ -3,7 +3,7 @@ html(lang="en-GB")
   head
     include templates/head.pug
   main
-    h1 Welcome to Lego Club!
+    h1 WELCOME TO CVC LEGO CLUB!
     countdown-component(data-base-font-size="26").hide
     article.challenge
       span.challenge-title
