--- a/src/templates/head.pug
+++ b/src/templates/head.pug
@@ -1,5 +1,5 @@
 meta(charset="utf-8")
-title Countdown Timer
+title LEGO Club Challenges!
 meta(name="description" content="A curated list of useful links.")
 meta(name="viewport" content="width=device-width, initial-scale=1")
 
