--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Raleway:ital@0;1&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Lato:wght@300,700&display=swap');
 
 @import './vars.scss';
 
@@ -60,7 +61,7 @@ body {
   color: var(--primary-font-colour);
   font-family: $font-family;
   font-size: $body-font-size;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 body {
@@ -81,18 +82,25 @@ body {
   }
 }
 
-h1 {
-  font-size: $font-size-xxl;
-  font-weight: 900;
-}
+h1,
+h2,
+h3 {
+  margin: 0.67em 0 0.33em;
 
-h2 {
-  font-size: $font-size-xl;
+  font-family: 'Josefin Sans', sans-serif;
   font-weight: 700;
 }
 
+h1 {
+  font-size: $font-size-xxxl;
+}
+
+h2 {
+  font-size: $font-size-xxl;
+}
+
 h3 {
-  font-size: $font-size-l;
+  font-size: $font-size-xl;
 }
 
 main {
@@ -100,25 +108,24 @@ main {
   flex: 1 0 auto;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
-  margin: $padding-standard;
+  justify-content: space-between;
+  margin: $padding-large 0;
   overflow: auto;
 
   background-color: var(--theme-colour);
 
+  gap: $padding-large;
+
   article {
-    font-size: $font-size-xl;
+    font-size: $font-size-xxl;
+    text-align: center;
 
     gap: $padding-standard;
 
     .challenge-title {
-      margin-right: $padding-standard;
+      margin-right: $padding-large;
 
       font-weight: 700;
-
-      &::after {
-        content: ':';
-      }
     }
   }
 }
@@ -131,14 +138,6 @@ countdown-component {
 
 @media screen and (min-width: 680px) {
   $padding-page-width: 10vw;
-
-  main {
-    padding: $padding-small $padding-page-width;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  $padding-page-width: 20vw;
 
   main {
     padding: $padding-small $padding-page-width;
