--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,5 +1,5 @@
 // @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Lato:wght@300,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Lato:wght@300;700&display=swap');
 
 @import './vars.scss';
 
